--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <button id="btn-range" class="mode-btn">அபிஜித்/வைநாசிகம்/வதை</button>
     <button id="btn-range1" class="mode-btn">பாவமுனை</button>
     <button id="btn-range2" class="mode-btn">எதிர் நட்சத்திரம்</button>
-    <button id="btn-range3" class="mode-btn">bhavam</button>
+    <button id="btn-range3" class="mode-btn">பாவம்</button>
     
   </div>
   
@@ -135,7 +135,7 @@
   </div>
   <div id="dasatree"></div>
   <script>
-    let mode = "cyclic"; // "cyclic", "current", "range"
+    let mode = "current"; // "cyclic", "current", "range"
     let padaDomList = [];
     let vimData, vimCurrentPath;
     let openState = { dasa:null, puthi:null, anthara:null };
