--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     .highlight-pada-interactive { background: #80e75e !important; color: #154d08 !important; font-weight: bold; border: 1.2px solid #08870e;}
     .highlight-pada-orange { background: #ffebb7 !important; color: #993700 !important; border: 1.5px solid #ffaa1a; font-weight: bold;}
     .highlight-pada-blue { background: #d1f7db !important; color: #1a1379 !important; border: 1.5px solid #856bea; font-weight: bold;}
-    .highlight-pada-green { background: #80ec72 !important; color: #18a505 !important; border: 1.5px solid #58ec60; font-weight: bold;}
+    .highlight-pada-green { background: #6cec87 !important; color: #0f4b15 !important; border: 1.5px solid #072c06; font-weight: bold;}
     .highlight-pada-red { background: #f19898 !important; color: #832615 !important; border: 1.5px solid #6a1506; font-weight: bold;}
     
     .clicked-pada-special { background: #6cec87 !important; color: #0f4b15 !important; border: 1.5px solid #072c06; font-weight: bold;}
